--- a/experience.html
+++ b/experience.html
@@ -30,7 +30,72 @@
   </header>
 
   <main>
-    <h1>Experience</h1>
+    <h1>Experience:</h1>
+    <div>
+      <h2>I previously worked as a nurse for 3 years, I worked in:</h2>
+    <ul>
+      <li>Acute medicine which is part of the emergency department</li>
+      <li>Haemodialysis which is nurse directed</li>
+    </ul>
+    <p>I was looking for a career change and discovered this role.</p>
+  </div>
+  <div>
+    <h2>My Transferable Skills:</h2>
+    <p>You may be thinking- what skills would I have from nursing that I can apply here?</p>
+
+    <p>Below are some examples:</p>
+
+      <ol>
+        <li><strong>Problem-Solving</strong></li>
+          <ul>
+            <li><strong>Nursing:</strong> Nurses constantly troubleshoot and make decisions to resolve health problems under 
+              pressure. This includes: assessing patients symptoms, analyse test results, and implement treatment plans.</li>
+              <li><strong>Developers:</strong> Developers also need strong problem-solving skills to debug, implement designs and troubleshoot problems. 
+                Developers break down complex problems into smaller, manageable tasks, similarily to diagnosing and treating patient deterioration.
+              </li>
+          </ul>
+        <li><strong>Adaptability</strong></li>
+          <ul>
+            <li><strong>Nursing:</strong> Healthcare environments are fast-paced and constantly changing. Nurses must quickly adapt to new situations, technologies, and protocols.</li>
+            <li><strong>Developers:</strong> Technology evolves rapidly, requiring developers to continually learn new programming languages, frameworks, and methodologies. 
+              Adaptability ensures developers can keep up with industry changes.</li>
+          </ul>
+        <li><strong>Communication Skills</strong></li>
+          <ul>
+            <li><strong>Nursing:</strong> Nurses are used to communicating with patients, families, and 
+              healthcare teams. They explain complex medical conditions and instructions in a clear, understandable way.</li>
+            <li><strong>Developers:</strong> Developers often collaborate with teams, stakeholders, and clients, explaining 
+              technical concepts to non-technical audiences and working together to build solutions. Effective 
+              written and verbal communication is key.</li>
+          </ul>
+        <li><strong>Time Management and Prioritisation</strong></li>
+          <ul>
+            <li><strong>Nursing:</strong> Managing a busy workload, prioritising patient care, and handling emergencies 
+              all require excellent time management and prioritisation. </li>
+            <li><strong>Developers:</strong> Developers often work on multiple projects with deadlines. Balancing competing priorities, 
+              managing sprints, and meeting project milestones are essential for staying productive and efficient.</li>
+          </ul>
+        <li><strong>Attention to Detail</strong></li>
+          <ul>
+            <li><strong>Nursing:</strong> Accuracy is critical in 
+              nursing, whether it's administering medication or documenting patient information. 
+              Small mistakes can have significant consequences.</li>
+            <li><strong>Developers:</strong> In coding, even a small error can cause bugs or system crashes. 
+              Writing clean, efficient, and error-free code requires the same high level of precision and 
+              attention to detail as in healthcare.</li>
+          </ul>
+      </ol>
+  </div>
+  <div>
+    <h3>If you want to find out more about my previous roles, please follow the links below:</h3>
+    <ul>
+        click <a href = "https://apply.jobs.scot.nhs.uk/Job/JobDetail?jobid=156690&source=JobtrainRss">here</a> for Acute Medicine
+    </ul>
+    <ul>
+        click <a href = "https://apply.jobs.scot.nhs.uk/Job/JobDetail?jobid=164692&source=JobtrainRss">here</a> for Haemodialysis
+    </ul>
+
+  </div>
   </main>
 
   <footer>
