--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
 <body>
   <header>
+    <h1>Emma Smith</h1>
+    <h2>This profile will give you some insight into who I am</h2>
+    <p>You can follow the links below to find out more!</p>
     <nav>
       <ul>
         <li>
@@ -30,11 +33,18 @@
   </header>
 
   <main>
-    <h1>[Your Name]</h1>
+    <p>Use the button below to reveal!</p>
+    <div>
+    <button aria-expanded= "false" class = "btn btn-primary">Reveal Me</button>
+    <p hidden-"">I had never written code before 3 weeks ago!</p>
+    <img hidden src="https://scontent-lhr8-1.xx.fbcdn.net/v/t1.15752-9/459625158_499938886189127_4050812905861617964_n.jpg?stp=dst-jpg_s403x403&_nc_cat=108&ccb=1-7&_nc_sid=0024fc&_nc_ohc=kALNe-P2yIMQ7kNvgH3Z9KO&_nc_ht=scontent-lhr8-1.xx&_nc_gid=Ajsz8aaIGx4nH4DvxfRMwPF&oh=03_Q7cD1QETqB4FS1x_Y1WgCwp72zm0XwCLP48piTyQKR8dORfgDQ&oe=671DE7D1"
+    alt = "Picture of me">
+    </div>
+
   </main>
 
   <footer>
-    <p>Copyright &copy; 2024 [Your Name]</p>
+    <p>Copyright &copy; 2024 Emma Smith</p>
   </footer>
 </body>
 
