--- a/experience.html
+++ b/experience.html
@@ -12,17 +12,17 @@
 <body>
   <header>
     <nav>
-      <ul>
-        <li>
-          <a href="index.html">Home</a>
+      <ul class="nav-links">
+        <li class="nav-item">
+          <a href="index.html" aria-current="page">Home</a>
         </li>
-        <li>
+        <li class="nav-item">
           <a href="bio.html">Bio</a>
         </li>
-        <li>
-          <a href="experience.html" aria-current="page">Experience</a>
+        <li class="nav-item">
+          <a href="experience.html">Experience</a>
         </li>
-        <li>
+        <li class="nav-item">
           <a href="portfolio.html">Portfolio</a>
         </li>
       </ul>
