--- a/index.html
+++ b/index.html
@@ -9,28 +9,30 @@
   <script defer src="script.js"></script>
 </head>
 
+<header>
+  <nav>
+    <ul class="nav-links">
+      <li class="nav-item">
+        <a href="index.html" aria-current="page">Home</a>
+      </li>
+      <li class="nav-item">
+        <a href="bio.html">Bio</a>
+      </li>
+      <li class="nav-item">
+        <a href="experience.html">Experience</a>
+      </li>
+      <li class="nav-item">
+        <a href="portfolio.html">Portfolio</a>
+      </li>
+    </ul>
+  </nav>
+</header>
+
 <body>
-  <header>
-    <h1>Emma Smith</h1>
+  <h1>Emma Smith</h1>
     <h2>This profile will give you some insight into who I am</h2>
-    <p>You can follow the links below to find out more!</p>
-    <nav>
-      <ul>
-        <li>
-          <a href="index.html" aria-current="page">Home</a>
-        </li>
-        <li>
-          <a href="bio.html">Bio</a>
-        </li>
-        <li>
-          <a href="experience.html">Experience</a>
-        </li>
-        <li>
-          <a href="portfolio.html">Portfolio</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+    <p>You can follow the links in the navigation bar to find out more!</p>
+
 
   <main>
     <p>Use the button below to reveal!</p>
