--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio - [Your Name]</title>
+  <title>Portfolio - Emma</title>
   <link rel="stylesheet" href="style.css">
   <script defer src="script.js"></script>
 </head>
@@ -12,18 +12,18 @@
 <body>
   <header>
     <nav>
-      <ul>
-        <li>
-          <a href="index.html">Home</a>
+      <ul class="nav-links">
+        <li class="nav-item">
+          <a href="index.html" aria-current="page">Home</a>
         </li>
-        <li>
+        <li class="nav-item">
           <a href="bio.html">Bio</a>
         </li>
-        <li>
+        <li class="nav-item">
           <a href="experience.html">Experience</a>
         </li>
-        <li>
-          <a href="portfolio.html" aria-current="page">Portfolio</a>
+        <li class="nav-item">
+          <a href="portfolio.html">Portfolio</a>
         </li>
       </ul>
     </nav>
